Adds new translations

--- a/Yapbam/src/Resources_hu.properties
+++ b/Yapbam/src/Resources_hu.properties
@@ -1,39 +1,52 @@
 #X-Generator: crowdin.com
+ApplicationName=Yet Another Personal Account Manager
 
-MainFrame.ReadError=YapBam nie jest w stanie odczyta\u0107 tego pliku
-MainFrame.CurrentBalance=Aktualne saldo: {0}
-MainFrame.FinalBalance=Saldo ko\u0144cowe: {0}
-MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Saldo ujemne: {0}
-MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Saldo dodatnie: {0}
-MainFrame.Transactions.Preferences.changeColor=Zmie\u0144 kolor
-MainFrame.Transactions.Preferences.setDefault=Ustawienia domy\u015blne
-MainFrame.ShowSubtransactions.All=Wszystkie
-MainFrame.ShowSubtransactions.None=\u017badne
-MainFrame.showColumns=Wy\u015bwietl kolumny...
-MainFrame.stat.hide.tip=Kliknij tutaj, aby ukry\u0107 szczeg\u00f3\u0142y
-MainFrame.stat.show.tip=Kliknij tu, aby uzyska\u0107 wi\u0119cej szczeg\u00f3\u0142\u00f3w
+MainFrame.ReadError=A Yapbam nem tudja olvasni ezt a f\u00e1jlt
+MainFrame.CheckedBalance=Ellen\u0151rz\u00f6tt egyenleg: {0}
+MainFrame.CurrentBalance=Aktu\u00e1lis egyenleg: {0}
+MainFrame.FinalBalance=V\u00e9gs\u0151 egyenleg: {0}
+MainFrame.CheckedBalance.ToolTip=Aktu\u00e1lis ellen\u0151rz\u00f6tt egyenleg (a nem ellen\u0151rz\u00f6tt tranzakci\u00f3k figyelmen k\u00edv\u00fcl maradnak)
+MainFrame.FinalBalance.ToolTip=V\u00e9gs\u0151 egyenleg (minden tranzakci\u00f3t figyelembe vesz)
+MainFrame.Transactions=Tranzakci\u00f3k
+MainFrame.Transactions.toolTip=Megjelen\u00edti a tranzakci\u00f3s t\u00e1bl\u00e1zatot \u00e9s eszk\u00f6z\u00f6ket a szerkeszt\u00e9shez, m\u00e1sol\u00e1shoz, ...
+MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Negat\u00edv egyenleg: {0}
+MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Pozit\u00edv egyenleg: {0}
+MainFrame.Transactions.Preferences.balanceSummary.title=Egyenleg \u00f6sszefoglal\u00f3
+MainFrame.Transactions.Preferences.changeColor=Sz\u00edn m\u00f3dos\u00edt\u00e1sa
+MainFrame.Transactions.Preferences.changeColor.tooltip=Kattintson ide a sz\u00f6veg sz\u00edn\u00e9nek megv\u00e1ltoztat\u00e1s\u00e1hoz
+MainFrame.Transactions.Preferences.setDefault=Alapbe\u00e1ll\u00edt\u00e1sok
+MainFrame.Transactions.Preferences.setDefault.tooltip=Kattintson ide az alap\u00e9rtelmezett be\u00e1ll\u00edt\u00e1sok vissza\u00e1ll\u00edt\u00e1s\u00e1hoz
+MainFrame.Transactions.Preferences.ChooseColorDialog.title=V\u00e1lasszon sz\u00ednt
+MainFrame.Transactions.Preferences.title=Tranzakci\u00f3k t\u00e1bl\u00e1zat
+MainFrame.Transactions.Preferences.tooltip=Ezen a lapon be\u00e1ll\u00edthatja a tranzakci\u00f3k t\u00e1bl\u00e1zat\u00e1nak megjelen\u00edt\u00e9s\u00e9t
+MainFrame.ReadLastError=Hiba t\u00f6rt\u00e9nt az utols\u00f3 megnyitott f\u00e1jl ({0}) olvas\u00e1sakor
+MainFrame.ShowSubtransactions=Altranzakci\u00f3k megjelen\u00edt\u00e9se...
+MainFrame.ShowSubtransactions.All=\u00d6sszes
+MainFrame.ShowSubtransactions.None=Egyik sem
+MainFrame.ShowSubtransactions.ToolTip=Haszn\u00e1lja ezt a men\u00fct az \u00f6sszes altranzakci\u00f3 megjelen\u00edt\u00e9s\u00e9hez vagy elrejt\u00e9s\u00e9hez
+MainFrame.showColumns=Oszlopok megjelen\u00edt\u00e9se...
+MainFrame.showColumns.ToolTip=Ezzel a men\u00fcvel oszlopokat jelen\u00edthet meg vagy rejthet el
+MainFrame.stat.hide.tip=Kattintson ide a r\u00e9szletek elrejt\u00e9s\u00e9hez
+MainFrame.stat.show.tip=Kattintson ide tov\u00e1bbi r\u00e9szletek\u00e9rt
+MainFrame.stat.summary=Kiad\u00e1sok sz\u00e1ma: {0}, sz\u00e1ml\u00e1k sz\u00e1ma: {1}, egyenleg: {2}
 
-MainMenu.File=Plik
-MainMenu.File.Mnemonic=F
+MainMenu.File=F\u00e1jl
+MainMenu.File.ToolTip=Lehet\u0151v\u00e9 teszi sz\u00e1mlaf\u00e1jlok l\u00e9trehoz\u00e1s\u00e1t, megnyit\u00e1s\u00e1t \u00e9s ment\u00e9s\u00e9t
 
-MainMenu.NewFile=Nowy
-MainMenu.NewFile.Mnemonic=N
+MainMenu.NewFile=\u00daj
+MainMenu.NewFile.ToolTip=\u00daj \u00fcres sz\u00e1mlaf\u00e1jlt hoz l\u00e9tre (tranzakci\u00f3k vagy fi\u00f3kok n\u00e9lk\u00fcl)
+MainMenu.NewFile.ConfirmMessage=\u00daj \u00fcres adatf\u00e1jlt szeretne l\u00e9trehozni. Akarja folytatni?
 
-MainMenu.Open=Otw\u00f3rz
-MainMenu.Open.Mnemonic=O
-MainMenu.Open.Accelerator=O
+MainMenu.Open=Megnyit\u00e1s
+MainMenu.Open.ToolTip=Megnyit egy kor\u00e1bban mentett sz\u00e1mlaf\u00e1jlt
 
-MainMenu.Save=Zapisz
-MainMenu.Save.Mnemonic=S
-MainMenu.Save.Accelerator=S
-MainMenu.Save.ToolTip=Zapisuje bie\u017c\u0105cy plik
+MainMenu.Save=Ment\u00e9s
+MainMenu.Save.ToolTip=Menti az aktu\u00e1lis f\u00e1jlt
 
-MainMenu.SaveAs=Zapisz jako...
-MainMenu.SaveAs.Mnemonic=A
-MainMenu.SaveAs.ToolTip=Tworzy kopi\u0119 bie\u017c\u0105cego pliku
+MainMenu.SaveAs=Ment\u00e9s m\u00e1sk\u00e9nt ...
+MainMenu.SaveAs.ToolTip=K\u00e9sz\u00edt egy m\u00e1solatot az aktu\u00e1lis f\u00e1jlr\u00f3l
 
-MainMenu.Import=Importuj
-MainMenu.Import.Mnemonic=I
+MainMenu.Import=Import\u00e1l\u00e1s
 
 
 
@@ -46,134 +59,91 @@ MainMenu.Import.Mnemonic=I
 
 
 
-MainMenu.Transactions.Duplicate.Mnemonic=D
-MainMenu.Transactions.Duplicate.Accelerator=D
 
-MainMenu.Transactions.Delete.Mnemonic=D
 #MainMenu.Transactions.Delete.Accelerator=D
 
-MainMenu.Transactions.Edit.Mnemonic=E
-MainMenu.Transactions.Edit.Accelerator=E
 
+MainMenu.Transactions.convertToPeriodical=\u00c1talak\u00edt\u00e1s periodikus tranzakci\u00f3ra
+MainMenu.Transactions.convertToPeriodical.ToolTip=\u00daj periodikus tranzakci\u00f3t hoz l\u00e9tre a tranzakci\u00f3t\u00edpus alapj\u00e1n 
 
+MainMenu.Transactions.Periodical=Periodikus tranzakci\u00f3k gener\u00e1l\u00e1sa
+MainMenu.Transactions.Periodical.ToolTip=Periodikus tranzakci\u00f3kat gener\u00e1l
 
-MainMenuBar.Filter=Filtr
-MainMenuBar.Receipts=Rachunki
+MainMenuBar.Filter=Sz\u0171r\u0151
+MainMenuBar.Filter.Tooltip=Sz\u0171ri a tranzakci\u00f3s t\u00e1bl\u00e1t
+MainMenuBar.checked=Ellen\u0151rz\u00f6tt tranzakci\u00f3k
+MainMenuBar.notChecked=Nem ellen\u0151rz\u00f6tt tranzakci\u00f3k
+MainMenuBar.customizedFilter=Testreszabott sz\u0171r\u0151k
+MainMenuBar.customizedFilter.toolTip=Megnyitja a p\u00e1rbesz\u00e9dpanelt a sz\u0171r\u0151k testreszab\u00e1s\u00e1hoz 
+MainMenuBar.eraseFilters=Sz\u0171r\u0151k t\u00f6rl\u00e9se
+MainMenuBar.eraseFilters.toolTip=\u00d6sszes sz\u0171r\u0151 t\u00f6rl\u00e9se
+MainMenuBar.Receipts=Sz\u00e1ml\u00e1k
+MainMenuBar.Expenses=Kiad\u00e1sok
+MainMenuBar.NoFilter=Nincs sz\u0171r\u00e9s
+MainMenuBar.checked.toolTip=Kiv\u00e1lasztja az ellen\u0151rz\u00f6tt tranzakci\u00f3kat
+MainMenuBar.notChecked.toolTip=Kiv\u00e1lasztja a nem ellen\u0151rz\u00f6tt tranzakci\u00f3kat
+MainMenuBar.Receipts.toolTip=Kiv\u00e1lasztja a sz\u00e1ml\u00e1kat
+MainMenuBar.Expenses.toolTip=Kiv\u00e1lasztja a kiad\u00e1sokat
+MainMenuBar.AccountFilter.toolTip=Kiv\u00e1lasztja a(z) {0} fi\u00f3k tranzakci\u00f3it
+MainMenuBar.NoAccountFilter.toolTip=T\u00f6rli a fi\u00f3ksz\u0171r\u0151t 
+MainMenuBar.NoCheckedFilter.toolTip=T\u00f6rli az \u00e1llapotsz\u0171r\u0151t (ellen\u0151rz\u00f6tt/nem ellen\u0151rz\u00f6tt) 
+MainMenuBar.NoAmountFilter.toolTip=T\u00f6rli az \u00f6sszegsz\u0171r\u0151t (kiad\u00e1s/sz\u00e1mla) 
 
 MainMenu.QuestionMark=?
 MainMenu.QuestionMark.Mnemonic=?
-MainMenu.QuestionMark.ToolTip=Pokazuje pomoc
+MainMenu.QuestionMark.ToolTip=Megjelen\u00edti a s\u00fag\u00f3t
 
-MainMenu.help=Pomoc
+MainMenu.help=S\u00fag\u00f3
+MainMenu.help.tooltip=Megnyitja a Yapbam s\u00fag\u00f3oldal\u00e1t
 
-MainMenu.About=O programie...
-MainMenu.About.Mnemonic=A
+MainMenu.About=N\u00e9vjegy...
+MainMenu.About.ToolTip=Inform\u00e1ci\u00f3k a programr\u00f3l (szerz\u0151, verzi\u00f3 ...)
 
-MainMenu.CheckUpdate=Sprawd\u017a dost\u0119pno\u015b\u0107 aktualizacji
-MainMenu.CheckUpdate.ToolTip=Sprawdza dost\u0119pno\u015b\u0107 aktualizacji przez internet
-MainMenu.CheckUpdate.Error.title=Nie uda\u0142o si\u0119 sprawdzi\u0107 aktualizacji
-MainMenu.CheckUpdate.FirstRun.title=Sprawd\u017a aktualizacje
-MainMenu.CheckUpdate.Success.Header=<HTML><BODY>Nowa wersja <B>Yapbam</B> jest dost\u0119pna.</BODY></HTML>
+MainMenu.CheckUpdate=Friss\u00edt\u00e9sek keres\u00e9se
+MainMenu.CheckUpdate.ToolTip=Friss\u00edt\u00e9sek keres\u00e9se az interneten kereszt\u00fcl
+MainMenu.CheckUpdate.Error.title=Nem siker\u00fclt ellen\u0151rizni a friss\u00edt\u00e9seket
+MainMenu.CheckUpdate.FirstRun.title=Friss\u00edt\u00e9s keres\u00e9se
+MainMenu.CheckUpdate.FirstRun.message=<HTML>\u00dcdv\u00f6z\u00f6lj\u00fck a Yapbamban\!<BR><BR>A Yapbam csatlakozhat az internethez, hogy ellen\u0151rizze, van-e \u00faj verzi\u00f3.<BR>Szeretn\u00e9, hogy a Yapbam elkezdje ezt az ellen\u0151rz\u00e9st? <BR><BR>Ez a be\u00e1ll\u00edt\u00e1s m\u00f3dos\u00edthat\u00f3 a Be\u00e1ll\u00edt\u00e1sok p\u00e1rbesz\u00e9dablakban (a F\u00e1jl men\u00fcben) </html>
+MainMenu.CheckUpdate.HttpError=<HTML><BODY>Hiba t\u00f6rt\u00e9nt a friss\u00edt\u0151 szerverrel val\u00f3 kommunik\u00e1ci\u00f3 sor\u00e1n: <B>Http Error {0,number}</B><BR><BR>Ez a szerver val\u00f3sz\u00edn\u0171leg \u00e1tmenetileg nem m\u0171k\u00f6dik.<BR><BR>K\u00e9rj\u00fck, pr\u00f3b\u00e1lko\u00fajra k\u00e9s\u0151bb. Ha a probl\u00e9ma tov\u00e1bbra is fenn\u00e1ll, keresse fel a <a href="{1}">{1}</a> webhelyet.</BODY></HTML>
+MainMenu.CheckUpdate.IOError=<HTML><BODY>Hiba t\u00f6rt\u00e9nt a friss\u00edt\u0151 szerverrel val\u00f3 kommunik\u00e1ci\u00f3 sor\u00e1n: <B>{0}</B><BR><BR>Ellen\u0151rizze az internetkapcsolatot vagy a Yapbam internetkapcsolat be\u00e1ll\u00edt\u00e1sait.<BR><BR>Ha a probl\u00e9ma tov\u00e1bbra is fenn\u00e1ll, keresse fel a <a href="{1}">{1}</a> webhelyet.</BODY></HTML>
+MainMenu.CheckUpdate.Success.Header=<HTML><BODY>A <B>Yapbam</B> \u00faj verzi\u00f3ja el\u00e9rhet\u0151.</BODY></HTML>
+MainMenu.CheckUpdate.NoUpdate.title=Nem \u00e9rhet\u0151 el friss\u00edt\u00e9s
+MainMenu.CheckUpdate.Success.title=Friss\u00edt\u00e9s el\u00e9rhet\u0151
+MainMenu.CheckUpdate.NoUpdate=Yapbam is up to date
 #Dialog displayed during online check for updates
+MainMenu.CheckUpdate.Dialog.title=Friss\u00edt\u00e9sek keres\u00e9se
+MainMenu.CheckUpdate.Dialog.message=Friss\u00edt\u00e9sek keres\u00e9se. K\u00e9rem v\u00e1rjon...
+MainMenu.CheckUpdate.Dialog.cancel.tooltip=Megszak\u00edtja a keres\u00e9st
 
+MainMenu.web.support=T\u00e1mogat\u00e1s
+MainMenu.web.support.tooltip=Megnyitja a Yapbam t\u00e1mogat\u00e1si weboldalt hiba vagy hib\u00e1s ford\u00edt\u00e1s bejelent\u00e9s\u00e9hez, illetve t\u00e1mogat\u00e1shoz, ... (internetkapcsolat sz\u00fcks\u00e9ges) 
 
-BalanceHistory.showGrid=Poka\u017c siatk\u0119
-BalanceHistory.showGrid.toolTip=Zaznacz to pole, aby zobaczy\u0107 siatk\u0119
 #next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
 
-AboutDialog.Content=<html>Copyright &copy; 2009-{2} <b>{0}</b> - Wszystkie prawa zastrze\u017cone<br>Wersja: <b>{1}</b></html>
-AboutDialog.License.TabName=Licencja
-AboutDialog.RelNotes.TabName=Informacje o wydaniu
-AboutDialog.Contributors.TabName=Wsp\u00f3\u0142tw\u00f3rcy
-
-AccountDialog.title.new=Dodaj konto
-AccountDialog.title.edit=Edytuj konto
-AccountDialog.account=Konto:
-AccountDialog.account.tooltip=Wpisz identyfikator konta
-AccountDialog.balance=Saldo pocz\u0105tkowe:
-AccountDialog.balance.tooltip=Wprowad\u017a saldo pocz\u0105tkowe
-AccountDialog.modes.border.title=Metody p\u0142atno\u015bci
 
 
-ModeDialog.title.new=Nowy tryb p\u0142atno\u015bci
-ModeDialog.title.edit=Edytuj tryb p\u0142atno\u015bci
-ModeDialog.account=Konto: {0}
-ModeDialog.name=Nazwa:
-ModeDialog.debt=Obci\u0105\u017cenie:
+
+ModeDialog.forReceipts.short=Sz\u00e1ml\u00e1k
+ModeDialog.useCheckBook=Csekkf\u00fczet haszn\u00e1lata
 
 
 
 
-Generic.example=Przyk\u0142ad:
-Generic.warning=Ostrze\u017cenie
-GenericButton.cancel=Anuluj
-GenericButton.close=Zamknij
-GenericButton.new=Nowa
-GenericButton.edit=Edytuj
-GenericButton.delete=Usu\u0144
-GenericButton.duplicate=Powiel
-GenericButton.yes=Tak
-GenericButton.no=Nie
-GenericButton.ignore=Ignoruj
-GenericButton.continue=Kontynuuj
 #A generic button in the alert dialog to deactivate the alert
-GenericButton.dontAskMeAnyMore=Nie pytaj mnie wi\u0119cej
-
-Transaction.0=S/T
-Transaction.account=Konto
-Transaction.date=Data
-Transaction.description=Opis
-Transaction.amount=Kwota
-Transaction.category=Kategoria
-Transaction.mode=Tryb
-
-TransactionDialog.account.new.tooltip=Kliknij, aby utworzy\u0107 nowe konto
-TransactionDialog.amount=Kwota:
-TransactionDialog.amount.tooltip=Wprowad\u017a tutaj kwot\u0119 transakcji
 
 
-Category.undefined=Nieokre\u015blony
-Mode.undefined=Nieokre\u015blony
 
-PreferencesDialog.title=Ustawienia
-PreferencesDialog.Localization.title=T\u0142umaczenia
-PreferencesDialog.Localization.toolTip=Ta karta umo\u017cliwia konfigurowanie j\u0119zyka i kraju (co ustawia u\u017cywan\u0105 walut\u0119)
-PreferencesDialog.Localization.country=Kraj
-PreferencesDialog.Localization.countryList.tooltip=Wybierz kraj z listy
-PreferencesDialog.Localization.customCountry=Niestandardowe
-PreferencesDialog.Localization.defaultCountry=Domy\u015blnie ({0})
-PreferencesDialog.Localization.defaultLanguage=<html>J\u0119zyk systemu<br>(Angielski, je\u015bli ten j\u0119zyk jest niedost\u0119pny w Yapbam)</html>
-PreferencesDialog.Localization.language=J\u0119zyk
-PreferencesDialog.Localization.revert=Wyczy\u015b\u0107
 
-PreferencesDialog.AutoUpdate.atStartup=Sprawd\u017a automatycznie aktualizacje podczas uruchamiania 
-PreferencesDialog.AutoUpdate.ifError.doNothing=Nic nie r\u00f3b
-PreferencesDialog.AutoUpdate.ifError.title=Je\u015bli wyst\u0105pi b\u0142\u0105d
-PreferencesDialog.AutoUpdate.interval.part2=dni
-PreferencesDialog.AutoUpdate.manually=Sprawd\u017a r\u0119cznie
-PreferencesDialog.AutoUpdate.title=Aktualizacje
 
-PreferencesDialog.LookAndFeel.title=Wygl\u0105d
+
+
 #-------- preference sub-panel about general graphic theme -------
-PreferencesDialog.Theme.theme=Motyw
-
-PreferencesDialog.Network.title=Sie\u0107
-PreferencesDialog.Network.direct=Po\u0142\u0105czenie bezpo\u015brednie
-PreferencesDialog.Network.password=Has\u0142o:
-PreferencesDialog.Network.port.label=Port:
 
 
-PeriodicalTransactionManager.settings.title=Ustawienia
-PeriodicalTransactionManager.period.column=Ka\u017cdego
-PeriodicalTransactionManager.ignoreFilter=Ignoruj filtr
 
-AccountManager.balanceColumn.title=Saldo pocz\u0105tkowe
-AccountManager.deleteMessage.confirm=Czy na pewno chcesz usun\u0105\u0107 to konto?
-AccountManager.title=Zarz\u0105dzanie kontami
+
 #AccountManager.modesNumber.title=Number of payment modes
 #AccountManager.checkbooksNumber.title=Number of checkbooks
-AccountManager.alertThresholdLess.title=Ostrze\u017c, je\u015bli saldo mniejsze ni\u017c
-AccountManager.alertThresholdMore.title=Ostrze\u017c, je\u015bli saldo wi\u0119ksze ni\u017c
 #AccountManager.balanceColumn.toolTip=Double click this cell to edit the account's initial balance (The Enter key validates your input)
 #AccountManager.nameColumn.toolTip=Double click this cell to edit the account's name (The Enter key validates your input)
 #AccountManager.transactionsNumber.toolTip=Contains the number of transactions under the account
@@ -185,20 +155,12 @@ AccountManager.alertThresholdMore.title=Ostrze\u017c, je\u015bli saldo wi\u0119k
 #AccountManager.error.message.empty=Account name cannot be blank
 #AccountManager.error.title=Invalid account name
 
-CategoryManager.new.toolTip=Tworzy now\u0105 kategori\u0119
-CategoryManager.title=Zarz\u0105dzanie kategoriami
-CategoryManager.toolTip=Ta karta umo\u017cliwia zarz\u0105dzanie kategoriami
-CategoryManager.delete.toolTip=Usuwa wybran\u0105 kategori\u0119
-CategoryManager.error.title=B\u0142\u0119dna nazwa kategorii
-
-
-StatisticsPlugin.title=Statystyki
 
 
 
-CustomFilterPanel.description.contains=Zawiera
 
-CustomFilterPanel.amount.to=i
+
+
 
 
 
