--- a/Yapbam/src/Resources_nl.properties
+++ b/Yapbam/src/Resources_nl.properties
@@ -1,8 +1,8 @@
 #X-Generator: crowdin.com
 
 MainFrame.Transactions=Verrichtingen
-MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Negatieve balans\: {0}
-MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Positieve balans\: {0}
+MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Negatieve balans: {0}
+MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Positieve balans: {0}
 MainFrame.Transactions.Preferences.balanceSummary.title=Balanssamenvatting
 MainFrame.Transactions.Preferences.changeColor=Kleur wijzigen
 MainFrame.Transactions.Preferences.setDefault=Standaardinstellingen
@@ -79,11 +79,11 @@ MainMenu.CheckUpdate.Success.title=Er is een update beschikbaar
 
 BalanceHistory.title=Balansgeschiedenis
 BalanceHistory.graph.title=Grafiek
-BalanceHistory.balance=Balans van {0}\: {1}
+BalanceHistory.balance=Balans van {0}: {1}
 BalanceHistory.showGrid=Raster weergeven
-BalanceHistory.alerts=Waarschuwingen\:
+BalanceHistory.alerts=Waarschuwingen:
 #next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
-BalanceHistory.alerts.format={0}\: {1,date,short} ({2})
+BalanceHistory.alerts.format={0}: {1,date,short} ({2})
 BalanceHistory.transaction.title=Verrichtingen
 
 AboutDialog.License.TabName=Licentie
@@ -91,29 +91,29 @@ AboutDialog.Contributors.TabName=Medewerkers
 
 AccountDialog.title.new=Nieuwe rekening
 AccountDialog.title.edit=Rekening bewerken
-AccountDialog.account=Rekening\:
-AccountDialog.balance=Beginbalans\:
+AccountDialog.account=Rekening:
+AccountDialog.balance=Beginbalans:
 
 
-ModeDialog.account=Rekening\: {0}
-ModeDialog.name=Naam\:
+ModeDialog.account=Rekening: {0}
+ModeDialog.name=Naam:
 ModeDialog.name.short=Korte naam
 ModeDialog.forDebts.short=Uitgaven
 ModeDialog.forReceipts.short=Uittreksels
 ModeDialog.useCheckBook=Een chequeboek gebruiken
-ModeDialog.daysNumber=Aantal dagen\:
-ModeDialog.debt=Debet\:
+ModeDialog.daysNumber=Aantal dagen:
+ModeDialog.debt=Debet:
 ModeDialog.deferred=Uitgesteld
 ModeDialog.immediate=Onmiddellijk
 ModeDialog.relative=Relatief
 
-CategoryDialog.category=Categorie\:
+CategoryDialog.category=Categorie:
 
 NotSavedDialog.ignore=Negeren
 NotSavedDialog.save=Opslaan
 
 
-Generic.example=Voorbeeld\:
+Generic.example=Voorbeeld:
 Generic.warning=Waarschuwing
 GenericButton.cancel=Annuleren
 GenericButton.close=Sluiten
@@ -138,13 +138,13 @@ Transaction.mode=Modus
 Transaction.number=Nummer
 Transaction.valueDate=Valutadatum
 
-TransactionDialog.amount=Bedrag\:
-TransactionDialog.category=Categorie\:
-TransactionDialog.description=Omschrijving\:
-TransactionDialog.number=Nummer\:
+TransactionDialog.amount=Bedrag:
+TransactionDialog.category=Categorie:
+TransactionDialog.description=Omschrijving:
+TransactionDialog.number=Nummer:
 TransactionDialog.title.new=Nieuwe verrichting
 TransactionDialog.title.edit=Verrichting bewerken
-TransactionDialog.valueDate=Valutadatum\:
+TransactionDialog.valueDate=Valutadatum:
 TransactionDialog.SubPanel.add=Toevoegen aan verrichting
 TransactionDialog.SubPanel.delete=Verwijderen
 TransactionDialog.SubPanel.modify=Bewerken
@@ -167,8 +167,8 @@ PreferencesDialog.LookAndFeel.title=Uitzicht
 #-------- preference sub-panel about general graphic theme -------
 
 PreferencesDialog.Network.title=Netwerk
-PreferencesDialog.Network.password=Wachtwoord\:
-PreferencesDialog.Network.user=Gebruiker\:
+PreferencesDialog.Network.password=Wachtwoord:
+PreferencesDialog.Network.user=Gebruiker:
 PreferencesDialog.Network.showPassword=Wachtwoord tonen
 
 PeriodicalTransactionDialog.period=Daarna om de
@@ -360,8 +360,8 @@ MainFrame.Transactions.Preferences.expenseSample=Uitgave
 #---------------------------------
 #Backup preference panel (This functionnality is not yet implemented)
 Backup.preference.ftp.ftp=FTP
-Backup.preference.ftp.server=Server\:
-Backup.preference.ftp.directory=Map\:
+Backup.preference.ftp.server=Server:
+Backup.preference.ftp.directory=Map:
 
 Backup.preference.disk.default=Standaard
 
@@ -420,9 +420,9 @@ com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Opslaan
 #Wordings related to computer's storage tab of the file selection dialog.
 com.fathzer.soft.jclop.FileChooserPanel.title=Computer
 
-com.fathzer.soft.jclop.Chooser.account=Rekening\: 
+com.fathzer.soft.jclop.Chooser.account=Rekening: 
 #first argument is the available space, second is the unit
-com.fathzer.soft.jclop.Chooser.fileName=Bestand\: 
+com.fathzer.soft.jclop.Chooser.fileName=Bestand: 
 
 #Wordings related to data size units
 com.fathzer.soft.jclop.Generic.data.unit.bytes=bytes
