--- a/Yapbam/src/Resources_zh.properties
+++ b/Yapbam/src/Resources_zh.properties
@@ -1,16 +1,16 @@
 #X-Generator: crowdin.com
 
 MainFrame.ReadError=Yapbam \u7121\u6cd5\u8b80\u53d6\u6b64\u6a94\u6848
-MainFrame.CheckedBalance=\u67e5\u5c0b\u9918\u984d\: {0}
+MainFrame.CheckedBalance=\u67e5\u5c0b\u9918\u984d: {0}
 MainFrame.CurrentBalance=\u76ee\u524d\u9918\u984d\uff1a {0}
-MainFrame.FinalBalance=\u6700\u5f8c\u7d50\u9918\: {0}
+MainFrame.FinalBalance=\u6700\u5f8c\u7d50\u9918: {0}
 MainFrame.CheckedBalance.ToolTip=\u76ee\u524d\u5df2\u6aa2\u67e5\u7684\u7d50\u9918 \uff08\u672a\u9078\u4e2d\u7684\u4ea4\u6613\u5c07\u4e0d\u5217\u5165\uff09
 MainFrame.CurrentBalance.ToolTip=\u76ee\u524d\u9918\u984d \uff08\u4ea4\u6613\u7d00\u9304\u5167\u5728\u4eca\u5929\u4e4b\u5f8c\u7684\u6709\u6548\u65e5\u671f\u5f8c\u5c07\u88ab\u5ffd\u7565\uff09
 MainFrame.FinalBalance.ToolTip=\u6700\u5f8c\u7684\u7d50\u9918 \uff08\u6c92\u6709\u4ea4\u6613\u8a18\u9304\u672a\u5217\u5165\uff09
 MainFrame.Transactions=\u4ea4\u6613
 MainFrame.Transactions.toolTip=\u986f\u793a\u7684\u4ea4\u6613\u8a18\u9304\u8868\u683c\u548c\u7de8\u8f2f\uff0c\u8907\u88fd\uff0c\u5de5\u5177\u7b49......
-MainFrame.Transactions.Preferences.balanceSummary.negativeSample=\u8ca0\u7d50\u9918\: {0}
-MainFrame.Transactions.Preferences.balanceSummary.positiveSample=\u6b63\u7d50\u9918\: {0}
+MainFrame.Transactions.Preferences.balanceSummary.negativeSample=\u8ca0\u7d50\u9918: {0}
+MainFrame.Transactions.Preferences.balanceSummary.positiveSample=\u6b63\u7d50\u9918: {0}
 MainFrame.Transactions.Preferences.balanceSummary.title=\u7d50\u9918\u6458\u8981
 MainFrame.Transactions.Preferences.changeColor=\u66f4\u6539\u984f\u8272
 MainFrame.Transactions.Preferences.changeColor.tooltip=\u82e5\u8981\u66f4\u6539\u6587\u5b57\u984f\u8272\uff0c\u8acb\u6309\u4e00\u4e0b\u6b64\u8655
@@ -59,7 +59,7 @@ MainMenuBar.Print=\u5217\u5370......
 MainMenuBar.Print.ToolTip=\u958b\u59cb\u5217\u5370
 MainMenuBar.Print.Accelerator=P
 MainMenu.Print.Mnemonic=R
-MainMenuBar.Print.Error.Message=<html>\u5728\u5217\u5370\u904e\u7a0b\u4e2d\u51fa\u73fe\u4ee5\u4e0b\u932f\u8aa4\: <br>{0}</html>
+MainMenuBar.Print.Error.Message=<html>\u5728\u5217\u5370\u904e\u7a0b\u4e2d\u51fa\u73fe\u4ee5\u4e0b\u932f\u8aa4: <br>{0}</html>
 MainMenuBar.Print.Error.Title=\u5217\u5370\u6642\u51fa\u932f
 
 MainMenu.Preferences=\u9078\u9805
@@ -152,8 +152,8 @@ MainMenu.CheckUpdate.ToolTip=\u900f\u904e\u7db2\u8def\u6aa2\u67e5\u66f4\u65b0
 MainMenu.CheckUpdate.Error.title=\u7121\u6cd5\u6aa2\u67e5\u66f4\u65b0
 MainMenu.CheckUpdate.FirstRun.title=\u6aa2\u67e5\u66f4\u65b0
 MainMenu.CheckUpdate.FirstRun.message=<HTML>\u6b61\u8fce\u60a8\u5230 Yapbam \!<BR><BR>Yapbam \u53ef\u4ee5\u96a8\u6642\u7db2\u8def\u6aa2\u67e5\u6700\u7684\u66f4\u65b0\u72c0\u614b\u3002<BR>\u60a8\u9700\u8981\u5728\u60a8\u7cfb\u7d71\u958b\u6a5f\u6642\u540c\u6642\u70ba\u60a8\u66f4\u65b0\u7684\u8a2d\u5b9a\u55ce\uff1f<BR><BR>\u9019\u9805\u8a2d\u5b9a\u53ef\u4ee5\u8abf\u6574\u5728\u60a8\u9996\u9078\u8a2d\u5b9a\u7684\u5c0d\u8a71\u65b9\u584a\u4e2d(\u5728\u6a94\u6848\u529f\u80fd\u8868)</html>
-MainMenu.CheckUpdate.HttpError=<HTML><BODY>\u8207\u4f3a\u670d\u5668\u806f\u7e6b\u4e2d\u7684\u767c\u751f\u932f\u8aa4\uff1a <B>Http \u932f\u8aa4 {0,number}</B> <BR><BR>\u6b64\u4f3a\u670d\u5668\u53ef\u80fd\u662f\u66ab\u7de9\u4e86\u3002 <BR><BR>\u8acb\u91cd\u8a66\u5f8c\u3002\u5982\u679c\u554f\u984c\u4ecd\u7136\u5b58\u5728\uff0c\u8acb\u8f49\u5230 <a href\="{1}"> {1}</a></BODY></HTML>
-MainMenu.CheckUpdate.IOError=<HTML><BODY>\u8207\u4f3a\u670d\u5668\u806f\u7e6b\u4e2d\u7684\u767c\u751f\u932f\u8aa4\uff1a<B>{0}</B> <BR><BR>\u8acb\u6aa2\u67e5\u60a8\u7684\u7db2\u8def\u9023\u63a5\u6216\u8207 Yapbam \u7684\u806f\u7db2\u8a2d\u7f6e\u3002 <BR><BR>\u5982\u679c\u554f\u984c\u4ecd\u7136\u5b58\u5728\uff0c\u8acb\u8f49\u5230 <a href\="{1}"> {1}</a></BODY></HTML>
+MainMenu.CheckUpdate.HttpError=<HTML><BODY>\u8207\u4f3a\u670d\u5668\u806f\u7e6b\u4e2d\u7684\u767c\u751f\u932f\u8aa4\uff1a <B>Http \u932f\u8aa4 {0,number}</B> <BR><BR>\u6b64\u4f3a\u670d\u5668\u53ef\u80fd\u662f\u66ab\u7de9\u4e86\u3002 <BR><BR>\u8acb\u91cd\u8a66\u5f8c\u3002\u5982\u679c\u554f\u984c\u4ecd\u7136\u5b58\u5728\uff0c\u8acb\u8f49\u5230 <a href="{1}"> {1}</a></BODY></HTML>
+MainMenu.CheckUpdate.IOError=<HTML><BODY>\u8207\u4f3a\u670d\u5668\u806f\u7e6b\u4e2d\u7684\u767c\u751f\u932f\u8aa4\uff1a<B>{0}</B> <BR><BR>\u8acb\u6aa2\u67e5\u60a8\u7684\u7db2\u8def\u9023\u63a5\u6216\u8207 Yapbam \u7684\u806f\u7db2\u8a2d\u7f6e\u3002 <BR><BR>\u5982\u679c\u554f\u984c\u4ecd\u7136\u5b58\u5728\uff0c\u8acb\u8f49\u5230 <a href="{1}"> {1}</a></BODY></HTML>
 MainMenu.CheckUpdate.Success.Header=<HTML><BODY><B>Yapbam</B> \u6709\u4e00\u500b\u65b0\u7684\u7248\u672c\u53ef\u4f9b\u4f7f\u7528\u3002</BODY></HTML>
 MainMenu.CheckUpdate.NoUpdate.title=\u5c1a\u7121\u66f4\u65b0
 MainMenu.CheckUpdate.Success.title=\u6709\u66f4\u65b0\u53ef\u7528
@@ -172,7 +172,7 @@ BalanceHistory.title=\u6b77\u53f2\u7d50\u9918
 BalanceHistory.toolTip=\u6bcf\u65e5\u7684\u7d50\u9918
 BalanceHistory.graph.title=\u5716\u8868
 BalanceHistory.graph.toolTip=\u6bcf\u65e5\u7684\u7d50\u9918\u5716\u8868
-BalanceHistory.balance=\ {0}\: {1} \u7684\u7d50\u9918
+BalanceHistory.balance=\ {0}: {1} \u7684\u7d50\u9918
 BalanceHistory.showGrid=\u986f\u793a\u683c\u7dda
 BalanceHistory.showGrid.toolTip=\u9078\u4e2d\u6b64\u6846\uff0c\u53ef\u770b\u5230\u683c\u7dda
 BalanceHistory.report.toolTip=\u6309\u4e00\u4e0b\u5716\u8868\u53ef\u6539\u8b8a\u65e5\u671f
@@ -180,7 +180,7 @@ BalanceHistory.toDay.toolTip=\u6309\u4e00\u4e0b\u8a2d\u7f6e\u65e5\u671f\u70ba\u4
 BalanceHistory.alerts=\u8b66\u793a\uff1a
 BalanceHistory.alertTooltipAdd=\ \u7b2c\u4e00\u6b21\u8b66\u5831\u5728 {0}
 #next line is used to format the alerts in the alerts menu. {0} is the account name, {1} the alert date, {2} a text like 50 euro < 150 euro (the reason why the alert is thrown).
-BalanceHistory.alerts.format={0}\: {1,date,short} ({2})
+BalanceHistory.alerts.format={0}: {1,date,short} ({2})
 BalanceHistory.transaction.title=\u4ea4\u6613\u8a18\u9304
 BalanceHistory.transaction.tooltip=\u6bcf\u65e5\u4ea4\u6613\u7d00\u9304\u548c\u7d50\u9918
 BalanceHistory.transaction.remainingBalance=\u5269\u9918\u9918\u984d
@@ -204,7 +204,7 @@ CheckModePanel.valueDateEnabled=\u66f4\u6539\u6709\u6548\u65e5\u671f\u6309\u7167
 
 ModeDialog.title.new=\u65b0\u4ed8\u6b3e\u65b9\u5f0f
 ModeDialog.title.edit=\u4fee\u6539\u4ed8\u6b3e\u65b9\u5f0f
-ModeDialog.account=\u5e33\u6236\: {0}
+ModeDialog.account=\u5e33\u6236: {0}
 ModeDialog.name=\u540d\u7a31\uff1a
 ModeDialog.forDebts=\u53ef\u7528\u7684\u82b1\u8cbb
 ModeDialog.forReceipts=\u53ef\u7528\u7684\u6536\u64da
