--- a/Yapbam/src/net/yapbam/gui/tools/messages.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages.properties
@@ -3,8 +3,8 @@
 #Mon Dec 23 18:39:35 CET 2013
 CurrencyConverterPanel.CodeColumnName=Code
 CurrencyConverterPanel.CurrencyColumnName=Currency
-CurrencyConverterPanel.CurrencyToColumnName=1 currency \= ? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \= ? currency
+CurrencyConverterPanel.CurrencyToColumnName=1 currency = ? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? currency
 CurrencyConverterPanel.amount.toolTip=Enter the amount to convert and press the <Tab> key
 CurrencyConverterPanel.destination.toolTip=Select the target currency 
 CurrencyConverterPanel.errorMessage=Error "{0}" occurred.
