--- a/Yapbam/src/net/yapbam/gui/tools/messages_fr.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages_fr.properties
@@ -3,8 +3,8 @@
 #Mon Dec 23 18:39:35 CET 2013
 CurrencyConverterPanel.CodeColumnName=Code
 CurrencyConverterPanel.CurrencyColumnName=Devise
-CurrencyConverterPanel.CurrencyToColumnName=1 devise \= ? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \= ? devises
+CurrencyConverterPanel.CurrencyToColumnName=1 devise = ? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? devises
 CurrencyConverterPanel.amount.toolTip=Tapez le montant \u00e0 convertir ici, terminez par la touche <Tab>
 CurrencyConverterPanel.destination.toolTip=S\u00e9lectionnez la devise de destination
 CurrencyConverterPanel.errorMessage=L'erreur "{0}" est survenue.
