--- a/Yapbam/src/net/yapbam/gui/tools/messages_it.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages_it.properties
@@ -3,8 +3,8 @@
 #Mon Dec 23 18:39:35 CET 2013
 CurrencyConverterPanel.CodeColumnName=Codice
 CurrencyConverterPanel.CurrencyColumnName=Valuta
-CurrencyConverterPanel.CurrencyToColumnName=1 valuta \=? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \=? valuta
+CurrencyConverterPanel.CurrencyToColumnName=1 valuta =? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} =? valuta
 CurrencyConverterPanel.amount.toolTip=Immettere la cifra da convertire e premere il tasto <Tab>
 CurrencyConverterPanel.destination.toolTip=Selezionare la valuta di destinazione 
 CurrencyConverterPanel.errorMessage=Si \u00e8 verificato l'errore "{0}".
