--- a/Yapbam/src/net/yapbam/gui/tools/messages_pt.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages_pt.properties
@@ -3,8 +3,8 @@
 #Mon Dec 23 18:39:35 CET 2013
 CurrencyConverterPanel.CodeColumnName=C\u00f3digo
 CurrencyConverterPanel.CurrencyColumnName=Moedas
-CurrencyConverterPanel.CurrencyToColumnName=1 moeda \= ? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \= ? moedas
+CurrencyConverterPanel.CurrencyToColumnName=1 moeda = ? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? moedas
 CurrencyConverterPanel.amount.toolTip=Digite o valor para ser convertido e pressione a tecla <Tab>
 CurrencyConverterPanel.destination.toolTip=Selecione a moeda visada
 CurrencyConverterPanel.errorMessage=L'Erro "{0}" ocorreu.
