--- a/Yapbam/src/net/yapbam/gui/tools/messages_tr.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages_tr.properties
@@ -3,8 +3,8 @@
 #Mon Dec 23 18:39:35 CET 2013
 CurrencyConverterPanel.CodeColumnName=Kod
 CurrencyConverterPanel.CurrencyColumnName=Para Birimi
-CurrencyConverterPanel.CurrencyToColumnName=1 para birimi \=? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \=? para birimi
+CurrencyConverterPanel.CurrencyToColumnName=1 para birimi =? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} =? para birimi
 CurrencyConverterPanel.amount.toolTip=D\u00f6n\u00fc\u015ft\u00fcrmek istedi\u011finiz miktar\u0131 girin ve <Tab> tu\u015funa bas\u0131n
 CurrencyConverterPanel.destination.toolTip=Hedef para birimi se\u00e7in 
 CurrencyConverterPanel.errorMessage="{0}" hatas\u0131 olu\u015ftu.
