--- a/Yapbam/src/net/yapbam/gui/tools/messages_zh.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages_zh.properties
@@ -3,8 +3,8 @@
 #Mon Dec 23 18:39:35 CET 2013
 CurrencyConverterPanel.CodeColumnName=\u4ee3\u78bc
 CurrencyConverterPanel.CurrencyColumnName=\u8ca8\u5e63
-CurrencyConverterPanel.CurrencyToColumnName=1 \u8ca8\u5e63 \=  \uff1f{0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \= \uff1f\u8ca8\u5e63
+CurrencyConverterPanel.CurrencyToColumnName=1 \u8ca8\u5e63 =  \uff1f{0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = \uff1f\u8ca8\u5e63
 CurrencyConverterPanel.amount.toolTip=\u8f38\u5165\u8981\u8f49\u63db\u7684\u91d1\u984d\uff0c\u6309 <Tab>\u9375
 CurrencyConverterPanel.destination.toolTip=\u9078\u64c7\u6a19\u7684\u8ca8\u5e63
 CurrencyConverterPanel.errorMessage=\u51fa\u73fe"{0}" \u932f\u8aa4\u3002
