--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -5,6 +5,10 @@ known
 	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
 	Sur Windows, les thèmes autre que Nimbus rendent incorrect l'alignement vertical des colonnes "description" et "commentaire" (Cela semble un bug de Java).
 	
+version	0.20.1 (??/12/2017)
+improvement
+	La traduction en turc est presque complète. Ajoute des traductions partielles en espagnol et hongrois.
+
 version	0.20.0 (10/12/2017)
 improvement
 	Ajoute la possibilité d'utiliser les dates de valeurs des opérations comme référence dans l'onglet "budget".
