--- a/Yapbam/src/localization/relnotes.txt
+++ b/Yapbam/src/localization/relnotes.txt
@@ -5,6 +5,10 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
+version	0.20.1 (12/??/2017)
+improvement
+	Translation in Turkish almost complete. Adds partial translations into Spanish and Hungarian.
+
 version	0.20.0 (12/10/2017)
 improvement
 	Adds the ability use transaction's value date in budget tab.
