--- a/src/net/yapbam/gui/tools/messages_de.properties
+++ b/src/net/yapbam/gui/tools/messages_de.properties
@@ -3,8 +3,8 @@
 #Mon Dec 23 18:39:35 CET 2013
 CurrencyConverterPanel.CodeColumnName=Code
 CurrencyConverterPanel.CurrencyColumnName=W\u00e4hrung
-CurrencyConverterPanel.CurrencyToColumnName=1 W\u00e4hrung \= ? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \= ? W\u00e4hrung
+CurrencyConverterPanel.CurrencyToColumnName=1 W\u00e4hrung = ? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? W\u00e4hrung
 CurrencyConverterPanel.amount.toolTip=Geben Sie den zu konvertierenden Betrag ein und dr\u00fccken Sie die <Tab>-Taste
 CurrencyConverterPanel.destination.toolTip=W\u00e4hlen Sie die Zielw\u00e4hrung
 CurrencyConverterPanel.errorMessage=Fehler "{0}" ist aufgetreten.
