--- a/src/net/yapbam/gui/tools/messages_ru.properties
+++ b/src/net/yapbam/gui/tools/messages_ru.properties
@@ -3,8 +3,8 @@
 #Mon Dec 23 18:39:35 CET 2013
 CurrencyConverterPanel.CodeColumnName=\u041a\u043e\u0434
 CurrencyConverterPanel.CurrencyColumnName=\u0412\u0430\u043b\u044e\u0442\u0430
-CurrencyConverterPanel.CurrencyToColumnName=1 \u0432\u0430\u043b\u044e\u0442\u0430 \= ? {0}
-CurrencyConverterPanel.ToCurrencyColumnName=1 {0} \= ? \u0432\u0430\u043b\u044e\u0442\u0430
+CurrencyConverterPanel.CurrencyToColumnName=1 \u0432\u0430\u043b\u044e\u0442\u0430 = ? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? \u0432\u0430\u043b\u044e\u0442\u0430
 CurrencyConverterPanel.amount.toolTip=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0441\u0443\u043c\u043c\u0443 \u0434\u043b\u044f \u043f\u0440\u0435\u043e\u0431\u0440\u0430\u0437\u043e\u0432\u0430\u043d\u0438\u044f \u0438 \u043d\u0430\u0436\u043c\u0438\u0442\u0435 \u043a\u043b\u0430\u0432\u0438\u0448\u0443 <Tab>
 CurrencyConverterPanel.destination.toolTip=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0446\u0435\u043b\u0435\u0432\u0443\u044e \u0432\u0430\u043b\u044e\u0442\u0443 
 CurrencyConverterPanel.errorMessage=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u043b\u0430 \u043e\u0448\u0438\u0431\u043a\u0430 "{0}".
