--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,7 +5,7 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
-version	0.20.1 (12/??/2017)
+version	0.20.1 (12/22/2017)
 improvement
 	Translation in Turkish almost complete. Adds partial translations into Spanish and Hungarian.
 
