--- a/Yapbam/src/Resources_pl.properties
+++ b/Yapbam/src/Resources_pl.properties
@@ -1,12 +1,19 @@
 #X-Generator: crowdin.com
+ApplicationName=Kolejny personalny menad\u017cer konta
 
 MainFrame.ReadError=YapBam nie jest w stanie odczyta\u0107 tego pliku
+MainFrame.CheckedBalance=Sprawdzone saldo: {0}
 MainFrame.CurrentBalance=Aktualne saldo: {0}
 MainFrame.FinalBalance=Saldo ko\u0144cowe: {0}
+MainFrame.CheckedBalance.ToolTip=Aktualne sprawdzone saldo (niesprawdzone transakcje nie s\u0105 liczone)
+MainFrame.FinalBalance.ToolTip=Finalne saldo (\u017cadne transakcje nie s\u0105 ignorowane)
+MainFrame.Transactions=Transakcje
 MainFrame.Transactions.Preferences.balanceSummary.negativeSample=Saldo ujemne: {0}
 MainFrame.Transactions.Preferences.balanceSummary.positiveSample=Saldo dodatnie: {0}
 MainFrame.Transactions.Preferences.changeColor=Zmie\u0144 kolor
+MainFrame.Transactions.Preferences.changeColor.tooltip=Kliknij tutaj \u017ceby zmieni\u0107 kolor tekstu
 MainFrame.Transactions.Preferences.setDefault=Ustawienia domy\u015blne
+MainFrame.Transactions.Preferences.setDefault.tooltip=Kliknij tutaj, aby przywr\u00f3ci\u0107 ustawienia fabryczne
 MainFrame.ShowSubtransactions.All=Wszystkie
 MainFrame.ShowSubtransactions.None=\u017badne
 MainFrame.showColumns=Wy\u015bwietl kolumny...
